--- a/about.html
+++ b/about.html
@@ -32,13 +32,16 @@
       <div id="content-wrap">
 
         <div id="navbar-container"></div>
+        <!-- <img src="/imgs/me.png" alt="Responsive image"> -->
         <article class="about" id="about-text">
 
-          <h1>Hi there</h1>
+          <h1>Hi there,</h1>
 
-          <p>and welcome to my site! I find it hard to reduce myself to a couple of words during introductions. Let's say for now that I'm a curious, sentient being, born and raised in the <a href="https://en.wikipedia.org/wiki/Canary_Islands" target="_blank">Canary Islands</a>, Spain (great place). Besides that, I've always been passionate about two areas: science and music. The first one because it gives us the power to truly understand Nature. The second one because it gives me a way to understand those things for which science doesn't apply. Professionally, I chose a scientific career and I hold a Ph.D. in Systems Biology. However, I always keep my violin close.</p>
+          <div id="my-photo-container"><img id="my-photo" src="/imgs/me.png" alt="Responsive image"></div>
 
-          <p>I have also developed a strong interest in programming, that is, beyond the MATLAB/R programming I used to do for my research. I'm a fan of python, which I now use as the main programming language in my scientific studies, and of JavaScript (and HTML5 and CSS3), which has tremendous potential for creativity in the web! I'm also an advocate of <a href="https://www.fosteropenscience.eu/content/what-open-science-introduction">open science</a> and open source software &mdash; particularly when used to make science. I believe that this is the best way to do science which is transparent, fair and accessible to anyone.</p>
+          <p>welcome to my site! I'm an inquisitive, sentient being, born and raised in the <a href="https://en.wikipedia.org/wiki/Canary_Islands" target="_blank">Canary Islands</a>, Spain (great place). I've always been passionate about science because it gives us the power to truly understand Nature. I have chosen research as my main career and hold a Ph.D. in Systems Biology.</p>
+
+          <p>I have also developed a strong interest in programming. I'm a fan of python, which I use in my scientific studies, and of JavaScript (and HTML5 and CSS3), which has tremendous potential for creativity in the web! I'm also an advocate of <a href="https://www.fosteropenscience.eu/content/what-open-science-introduction">open science</a> and open source software &mdash; particularly when used to make science. I believe that this is the only way to do transparent, fair science which is accessible to anyone.</p>
 
           <p>I hope that you enjoy and find some of the content of this site useful. If you are interested in my formal education and research do take a look at my <a href="/assets/CV.pdf" target="_blank">CV</a> and <a href="/research">scientific publications</a>. If, on the other hand, you are curious about the kind of stuff that I do for fun, pay a visit to my <a href="/blog">Blog</a> and the <a href="/apps">web Apps</a> that I have made. That's all for now...</p>
 
