--- a/about.html
+++ b/about.html
@@ -54,5 +54,8 @@
 
     </div>
 
+    <div id="return-to-start-arrow"  onclick="scrollToTop()"></div>
+    <script src="/js/scrollToTop.js"></script>
+
   </body>
 </html>
