--- a/apps.html
+++ b/apps.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="grid_item" tabindex="0">
-                        <div class="grid_item_title">The Pentagram of Venus</div>
+                        <div class="grid_item_title">Pentagram of Venus</div>
                         <img class="thumbnail" src="/imgs/apps/pentagram.png" alt="Responsive image">
                         <button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
                         <button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
